Updatel Layout Community

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @import "tailwindcss";
 
+@import url('https://fonts.googleapis.com/css2?family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap');
 
+html, body {
+  font-family: 'Zalando Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
